style.css
body {
    background-color: rgb(38, 76, 126);
    padding: 0 50px;
}

#app {
    font-family: "Nunito", sans-serif;
    color: aliceblue;
}

#app .title,
#app .abt {
    text-align: center;
}

.flex {
    display: flex;
    width: 80%;
    margin: auto;
    justify-content: safe;
}

.flex_content {
    flex: 1;
    border: 1px solid #fff;
    border-radius: 7px;
}

.flex_content:nth-of-type(1) {
    margin-right: 1%;
}

.flex_content:nth-of-type(2){
    flex: 1.3;
}

.flex_content:nth-of-type(1){
    background-color: rgba(23, 47, 78, 0.918);
}

.form input {
    font-family: "Nunito", sans-serif;
    display: block;
    margin-bottom: 20px;
    margin-top: 4px;
    width: 95%;
    height: 30px;
    outline: none;
    border: 1px solid #ffffff71;
    border-radius: 4px;
    padding-left: 5%;
}

.form textarea {
    font-family: "Nunito", sans-serif;
    display: block;
    margin-bottom: 20px;
    margin-top: 4px;
    width: 95%;
    outline: none;
    border: 1px solid #ffffff71;
    border-radius: 4px;
    padding: 5px 0 5px 5%;
}

.flex_form{
    padding: 40px;
}

.form button{
    display: block;
    margin-bottom: 10px;
    width: 100%;
    height: 30px;
    text-transform: uppercase;
    font-weight: 400;
    outline: none;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-family: "Nunito", sans-serif;
}

form button.btn_success{
    background-color: rgb(3, 211, 90);
    color: #ffffff;
}

form button.btn_danger{
    background-color: rgb(228, 29, 29);
    color: #ffffff;
}

form button.btn_primary{
    background-color: rgb(6, 85, 255);
    color: #ffffff;
}

.flex_expenses{
    overflow-y: auto;
    max-height: 120vh;
}

.flex_expenses .head{
    background-color: rgba(23, 47, 78, 0.918);
    margin: 0;
    padding-top: 10px;
    padding-bottom: 4px;
    text-align: center;
    border-top-right-radius: 7px;
    border-top-left-radius: 7px;
}

.flex_expenses .total{
    background-color: rgba(23, 47, 78, 0.562);
    display: flex;
    padding: 5px 10px;
    justify-content: space-between;
    margin-bottom: 5%;
}

.flex_expenses .total h3{
    margin: 0;
}

.flex_expenses .expense{
    border-left: 10px solid rgba(23, 47, 78, 0.918);
    color: #000000;
    padding: 2%;
    border-radius: 7px;
    background-color: #fefefe;
    width: 85%;
    margin: auto;
    margin-bottom: 2%;
}

.flex_expenses .expense p{
    margin: 1%;
}

@media screen and (max-width: 768px){
    .flex{
        flex-direction: column;
        width: 90%;
    }

    .flex_expenses{
        margin-top: 3%;
    }
}

@media screen and (max-width: 500px){
    body{
        padding: 0 20px;
    }
}

